Implement subtitle playback

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <script src="%PUBLIC_URL%/subtitles-octopus/subtitles-octopus.js"></script>
     <title>MKV Player</title>
   </head>
   <body>
